--- a/src/app/landing-page-component/landing-page-component.component.html
+++ b/src/app/landing-page-component/landing-page-component.component.html
@@ -1,8 +1,11 @@
 <div class="landing-block">
-
+<br>
+<br>
+<br>
 <img src="assets/snapface.png" alt="Snapface logo">
 <div  class="landing-links">
-<a>  continuer vers Snapface</a>    
+<!--<a routerLink="facesnaps">  continuer vers Snapface</a> -->
+<button (click)="onContinue()" >continuer vers Snapface</button>   
 </div>
 
 
