--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header> 
     <h1> snapface</h1>
+    <nav>
+        <a routerLink="">home</a>
+        <a routerLink="facesnaps" routerLinkActive="active">FaceSnaps</a>
+    </nav>
 </header>
