--- a/src/app/single-face-snap/single-face-snap.component.html
+++ b/src/app/single-face-snap/single-face-snap.component.html
@@ -13,6 +13,8 @@
     <p>🤌 
         <button (click)="onSnap()"> {{valeurBouton}}</button>
         <span [ngStyle]="{color:'rgb(0,'+faceSnap.snaps+',0)'}">{{ faceSnap.snaps }}</span>
+
+  <a routerLink="/facesnaps">Back</a>
     </p>
 
 </div>
