--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,5 +3,10 @@
     <nav>
         <a routerLink="">home</a>
         <a routerLink="facesnaps" routerLinkActive="active">FaceSnaps</a>
+        <button  (click)="newSnap()">new Snap</button>
     </nav>
+
+
+    
+   
 </header>
