--- a/src/app/landing-page-component/landing-page-component.component.html
+++ b/src/app/landing-page-component/landing-page-component.component.html
@@ -1,7 +1,14 @@
 <div class="landing-block">
+    
 <br>
 <br>
 <br>
+
+<form #emailForm='ngForm' (ngSubmit)="onSubmitForm(emailForm)">
+    <label for="emailInput">Inscrivez-vous pour recevoir notre newsletter</label>
+    <input type="email" id="emailInput" [(ngModel)]= "userEmail" name="userEmail">
+    <button type="submit">Ok</button>
+</form>
 <img src="assets/snapface.png" alt="Snapface logo">
 <div  class="landing-links">
 <!--<a routerLink="facesnaps">  continuer vers Snapface</a> -->
