intégration requêtes composées

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<router-outlet> </router-outlet>
+<router-outlet> </router-outlet>  
+<!--  <h1>{{getTrainObservable$ | async}}</h1>  -->
