--- a/src/app/single-face-snap/single-face-snap.component.html
+++ b/src/app/single-face-snap/single-face-snap.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="face-snap-card " *ngIf="faceSnaps | async as faceSnaps" [ngClass]="{snapped:valeurBouton==='Oops, un Snap' }"> 
+<div class="face-snap-card " *ngIf="faceSnap " [ngClass]="{snapped:valeurBouton==='Oops, un Snap' }"> 
     <h2>{{faceSnap.title | uppercase}}</h2>
     <p>Mis en ligne le {{ faceSnap.createdDate | date: 'dd/MM/yy, à HH:mm'}}</p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
@@ -11,7 +11,7 @@
     
 
     <p>🤌 
-        <button (click)="onSnap()"> {{valeurBouton}}</button>
+        <button (click)="onSnap(faceSnap.id)"> {{valeurBouton}}</button>
         <span [ngStyle]="{color:'rgb(0,'+faceSnap.snaps+',0)'}">{{ faceSnap.snaps }}</span>
 
   <a routerLink="/facesnaps">Back</a>
