--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div class="form-card">
+    <h2>Connexion</h2>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="text" id="email">
+    </div>
+    <div class="form-group">
+      <label for="password">Mot de passe</label>
+      <input type="password" id="password">
+    </div>
+    <div class="action-buttons">
+      <button (click)="login()">Connexion</button>
+    </div>
+  </div>
